--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <title>My Web</title>
+    <title>tt</title>
     <body>
-        <hl>HELLO HTML 666</hl>
+        <div style="border: 10px outset #cf8a8a4b;
+        background-color:lightblue;
+        text-align: center;
+        padding-top: 200px;">
+        head
+        <p>abcacbacbacacbabcbcabcbacbabcabbcababcbacb</p>
+        </div>
+        
+        <div style="border: 10px outset rgb(136, 137, 229);
+        background-color:rgb(206, 139, 112);
+        text-align: left;
+        padding-bottom: 400px;">
+        new
+        <h1>hi</h1>
+        </div>
+        
+        <div style="border: 10px outset rgb(160, 65, 65);
+        background-color:rgb(173, 230, 178);
+        text-align: right;
+        padding-top: 200px;">
+        footer
+        <h4>ppppppp</h4>
+
+        </div>
     </body>
 </html>
